# uvs

./: .uv-scripts-registry.json  .uvs-registry.json  LICENSE.md  MIGRATION.md  PLAN.md  QUICKSTART.md  README-from-scripts-dir.md  README.md  Readme-full.md  To-do.md  pyproject.toml  uv-single.py  uvs-example.py  uvs.toml
.kilocode/rules/: python.md
.kilocode/rules/memory-bank/: brief.md
examples/: README.md  advanced-pep723.py  complex-cli.py  uvs-advanced-pep723.py  uvs-complex-cli.py  uvs-simple-example.py
history/: Initial-idea.md  Opening-idea.md  kilo_code_task_oct-3-2025_10-46-42-am.md  kilo_code_task_oct-3-2025_11-36-22.md  kilo_code_task_oct-3-2025_2-14-12-pm.md  kilo_code_task_oct-3-2025_21-02-45.md
scripts/: README.md  uv-script-install.py  uvs.py
src/uvs/: cli.py  uvs.py
tests/: test_cli.py  test_e2e.py  test_uninstall.py
uv-packages/uv-single/: README.md  pyproject.toml
uv-packages/uv-single/src/uv_single/: __init__.py
uv-packages/uvs-single/: README.md  pyproject.toml
uv-packages/uvs-single/src/uvs_single/: __init__.py
uv-tool-pkg/: pyproject.toml
uv-tool-pkg/src/uv_tool_pkg/: __init__.py
uvs-tool-pkg/: pyproject.toml
uvs-tool-pkg/src/uvs_tool_pkg/: __init__.py
