[project]
name = "uvs"
version = "0.1.0"
description = "uvs transforms single-file self-contained Python scripts with PEP723-style metadata into installable packages using `uv tool install`, making them available as command-line tools."
readme = "README.md"
authors = [
    { name = "maphew", email = "maphew@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
]

[project.scripts]
uvs = "uvs.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.6.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
