[project]
name = "uvs-tool-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maphew", email = "maphew@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uvs-tool-pkg = "uvs_tool_pkg:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
